# python-shogi

./: .editorconfig  .gitignore  .travis.yml  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini  tukushiari-KinoP07-20170522_105601.kif.txt
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  other.md
.github/workflows/: codeql-analysis.yml  doctest.yml  pythonpackage.yml
data/games/: habu-fujii-2006.kif
scripts/: random_csa_tcp_match  random_self_match  random_shogidokoro_match  random_shogidokoro_match.py
shogi/: CSA.py  Consts.py  KIF.py  Move.py  Person.py  Piece.py  SVG.py  __init__.py
src/: Board.c  cextension.c  shogi.c
tests/: board_test.py  cboard_test.py  csa_test.py  kif_test.py  move_test.py  perft_test.py  person_test.py  svg_test.py
