[tool.poetry]
name = "python-shogi"
version = "1.1.0"
description = "A pure Python shogi library with move generation and validation and handling of common formats."
authors = ["Tasuku SUENAGA a.k.a. gunyarakun <tasuku-s-github@titech.ac>"]
keywords = ["shogi", "csa", "kif"]
readme = "README.rst"
homepage = "https://github.com/gunyarakun/python-shogi"
packages = [{ include = "shogi"}]
license = "GPL-3.0-only"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Operating System :: OS Independent',
  'Topic :: Games/Entertainment :: Board Games',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = ">=3.4"

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=["config",]

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,E501,W503,"
